@@ -1,3 +1,8 @@
+2014-10-16  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_proc.cc (format_proc_partitions): Extend output to print
+	the windows mount points the device is mounted on.
+
 2014-10-14  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_socket.cc (fhandler_socket::connect): Don't change state
